review on mobile menu without found issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 
 .html {
   overflow-x: hidden;
+  width:100%;
 }
 
 .body {
@@ -22,12 +23,12 @@
   background-color: #f4f5f7;
   filter: none;
   overflow-x: hidden;
-  position: relative;
 }
 
 .intro {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .header {
